# AST-Project

./: .gitignore  CMakeLists.txt  Notes  README.md  clangO3.txt  clangO3Linux.txt  compare.py  failures-clang.txt  failures_old.txt  gccO3.txt  result.txt  sanitize.sh  smithDemC.sh  tmp.out
comp/: compare.py  ifTransform.sh
creduceTry/: a.out  bs.c  clang11.1_case2.1.c  gcc11.1.c  gcc3x11.1.c  init.s  initial.c  initial.s  prog725.s  resultO1.c  resultO33x.c  resultO33x_rewrite.c  result_rewrite.c  rewritten.c  rewritten.s  test1.sh  thing.out  tmp.out  tmp.txt
csmith_ex/: prog0.c  prog1.c  prog10.c  prog100.c  prog101.c  prog102.c  prog103.c  prog104.c  prog105.c  prog106.c  prog107.c  prog108.c  prog109.c  prog11.c  prog110.c  prog111.c  prog112.c  prog113.c  prog114.c  prog115.c  prog116.c  prog117.c  prog118.c  prog119.c  prog12.c  prog120.c  prog121.c  prog122.c  prog123.c  prog124.c  prog125.c  prog126.c  prog127.c  prog128.c  prog129.c  prog13.c  prog130.c  prog131.c  prog132.c  prog133.c  (+958 more)
examples/: if_backup.cpp  prog1.cpp  prog14.cpp  prog16.cpp  prog17.cpp  prog18.cpp  prog21.cpp  prog23.cpp  (+7 more)
src/: ASTOptions.cpp  ASTOptions.h  AddReorderCallback.cpp  AddReorderCallback.h  CMakeLists.txt  CustomConsumer.cpp  CustomConsumer.h  CustomFrontendAction.cpp  CustomFrontendAction.h  ForToWhileCallback.cpp  ForToWhileCallback.h  IfElseBreakupCallback.cpp  IfElseBreakupCallback.h  IfReorderCallback.cpp  IfReorderCallback.h  LoopConverter.cpp  LoopConverter.h  LoopPrinter.cpp  LoopPrinter.h  LoopTransformer.cpp  LoopTransformer.h  Main.cpp  ReplacementUtils.h
(+22 files in other folders)
